Fix navbar text alignment

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -21,6 +21,7 @@ nav {
  .navbar-right {
   display: flex;
   flex-direction: column;
+  align-self: flex-end;
  }
 
  .write-bold {
